# FastBGrowth

./: CMakeLists.txt  README.md
CleverSeg/: CMakeLists.txt  qSlicerCleverSegModule.cxx  qSlicerCleverSegModule.h  qSlicerCleverSegModuleWidget.cxx  qSlicerCleverSegModuleWidget.h
CleverSeg/Logic/: CMakeLists.txt  CleverSegSegmenter.h  CleverSegSegmenter.hxx  Utilities.h  vtkCleverSeg.cxx  vtkCleverSegLogic.cxx  vtkCleverSegLogic.h  vtkCleverSegSeg.cxx  vtkCleverSegSeg.h  vtkSlicerCleverSegLogic.cxx  vtkSlicerCleverSegLogic.h
CleverSeg/Resources/: qSlicerCleverSegModule.qrc
CleverSeg/Resources/UI/: qSlicerCleverSegFooBarWidget.ui  qSlicerCleverSegModuleWidget.ui
CleverSeg/Widgets/: CMakeLists.txt  qSlicerCleverSegFooBarWidget.cxx  qSlicerCleverSegFooBarWidget.h
CleverSegEffect/: CMakeLists.txt  CleverSegEffect.py  bakcup
